--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,22 +1,25 @@
 <div class="container">
-  <div class="px-4 py-5 my-5 d-flex align-items-center justify-content-center" style="
-          background-image: url('/app/assets/images/picturehouse.jpg');
-          height: 400px";>
-    <div class="display-5 fw-bold"><%= @list.name %></div>
+  <div class="try px-4 py-5 my-5 d-flex align-items-center justify-content-center">
+    <div class="display-5 fw-bold text-light">
+      <%= @list.name %>
+    </div>
   </div>
   <div class="add-button d-flex justify-content-end m-3">
-    <%= link_to "Add a movie", new_list_bookmark_path(@list), class:"btn btn-primary" %>
+    <%= link_to "Add a movie", new_list_bookmark_path(@list), class:"btn btn-success" %>
   </div>
   <div class="row d-flex justify-content-center">
     <% @bookmarks.each do |bookmark| %>
-      <div class="card m-3" style="width: 30rem;">
-        <img class="card-img-top" src="<%= bookmark.movie.poster_url %>" alt="Card image cap">
+      <div class="card m-3" style="width: 25rem;">
+        <img class="card-img-top" src= "asset_url(seats.jpg)" alt="Card image cap">
         <div class="card-head d-flex justify-content-between">
           <h3 class="card-title p-3"><%= bookmark.movie.title %></h5>
           <p class="p-3"> <%= bookmark.movie.rating %></p>
         </div>
         <div class="card-body">
           <p class="card-text"><%= bookmark.movie.overview %></p>
+        </div>
+        <div class="card-body">
+          <p class="card-link d-flex justify-content-end"> <%= link_to "Delete", bookmark_path %></p>
         </div>
       </div>
     <% end %>
