--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <%# <%= render "shared/navbar" %>
+    <%= render "shared/navbar" %>
     <%= yield %>
   </body>
 </html>
