--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,4 +1,6 @@
-  <%= simple_form_for(@list) do |f| %>
-    <%= f.input :name %>
-    <%= f.submit %>
-  <% end %>
+  <div class="container">
+    <%= simple_form_for(@list) do |f| %>
+      <%= f.input :name %>
+      <%= f.submit %>
+    <% end %>
+  </div>
