--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,9 +1,8 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon fixed-top">
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container">
     <%= link_to "#", class: "navbar-brand" do %>
       <%= image_tag "" %>
     <% end %>
-
     <div class="navbar-collapse">
       <ul class="navbar-nav me-auto">
           <li class="nav-item active">
