--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,18 +1,25 @@
-<div class="px-4 py-5 my-5 d-flex align-items-center justify-content-center" style="
-          background-image: image-url(app/assets/images/clapper.jpg),
-          height: 400px";>
+<div class="home-hero d-flex align-items-center justify-content-center">
   <div class="display-5 fw-bold text-light">Save any kind of movie</div>
 </div>
 <div class="container">
   <div class="row d-flex justify-content-around m-5">
     <% @lists.each do |list| %>
-        <div class="card p-5 m-3 bg-image" style="width: 18rem;">
-          <%= link_to list_path(list) do %>
-            <div class="card-body d-flex align-items-center justify-content-center ">
-              <h5 class="card-title"><%= list.name %></h5>
-            </div>
-          <% end %>
+
+      <% if list.photo.attached? %>
+        <div class="list-card card p-5 m-3 bg-image"  style="background-image: linear-gradient(rgba(0,0,0,0.3),
+                  rgba(0,0,0,0.3)),
+                  url('<%= cl_image_path list.photo.key %>');
+                  width: 18rem;">
+      <% else %>
+        <div class="list-card card p-5 m-3 bg-image" style="width: 18rem;">
+      <% end %>
+      <%= link_to list_path(list) do %>
+        <div class="card-category d-flex align-items-center justify-content-center">
+          <h5 class="card-title"><%= list.name %></h5>
         </div>
+      <% end %>
+    </div>
     <% end %>
+
   </div>
 </div>
