--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -45,12 +45,12 @@
   color: white;
   border-radius: 4px;
   box-shadow: 1px, 1px, 1px,rgba(0, 0, 0, 0.5);
+  font-weight: bolder;
 }
 
 a {
   text-decoration: none;
   color: white;
-  font-weight: bold;
   transition: transform 0.4s ease-in-out;
 }
 
